--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equic="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title></title>
+    <title>Test</title>
 
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
 
   <body>
-    
+    <h1>This is a test.</h1>
   </body>
 </html>
