--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta http-equic="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Test</title>
+    <title>Hexadecimal Color Code Game</title>
 
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
 
   <body>
-    <h1>This is a test.</h1>
+    <h1>What is the color code for this color?</h1>
+
+    <div id="colorSample"></div>
+
+    <div class="answer" id="a">A</div>
+    <div class="answer" id="b">B</div>
+    <div class="answer" id="c">C</div>
+    <div class="answer" id="d">D</div>
+
+    <div class="answer">Score: <span id="score"></span></div>
+
   </body>
 </html>
