--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equic="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Hexadecimal Color Code Game</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="manifest" href="manifest.json" />
   </head>
 
   <body>
-    <h1>What is the color code for this color?</h1>
+    <h1>Hexadecimal Color Code Game</h1>
+    <h2 id="level">You are in lever 1</h2>
+    <h2 id="question">What is the color code for this color?</h2>
 
     <div id="colorSample"></div>
 
-    <div class="answer" id="a">A</div>
-    <div class="answer" id="b">B</div>
-    <div class="answer" id="c">C</div>
-    <div class="answer" id="d">D</div>
-
-    <div class="answer">Score: <span id="score"></span></div>
+    <div id="answerContainer">
+      <div class="answer" id="a">A</div>
+      <div class="answer" id="b">B</div>
+      <div class="answer" id="c">C</div>
+      <div class="answer" id="d">D</div>
+    </div>
+    
+    <div class="answer">Score: <span id="score">0 / 0</span></div>
 
   </body>
 </html>
