--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <link rel="manifest" href="manifest.json" />
+    <link rel="icon" type="image/png" href="images/icons/app-icon-192.png">
   </head>
 
   <body>
     <h1>Hexadecimal Color Code Game</h1>
-    <h2 id="level">You are in lever 1</h2>
+    <h2 id="level">You are in level 1</h2>
     <h2 id="question">What is the color code for this color?</h2>
 
     <div id="colorSample"></div>
@@ -27,6 +28,8 @@
     </div>
     
     <div class="answer">Score: <span id="score">0 / 0</span></div>
+
+    <button id="installButton" style="display: none;">Install App</button>
 
   </body>
 </html>
