--- a/result.html
+++ b/result.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="icon" type="image/png" href="images/icons/app-icon-192.png">
+
   </head>
 
   <body>
