--- a/result.html
+++ b/result.html
@@ -19,7 +19,7 @@
 
     <div class="answer"><span id="score">0 / 0</span></div>
 
-    <div class="answer" id="back">Back</div>
+    <div class="answer" id="back">Next Level</div>
 
     <div class="answer" id="switchGameMode">Switch Game Mode</div>
 
