--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="answer" id="d">D</div>
     </div>
     
-    <div class="answer">Score: <span id="score">0 / 0</span></div>
+    <h2>Score: <span id="score">0 / 0</span></h2>
 
     <button id="installButton" style="display: none;">Install App</button>
 
