--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="images/icons/app-icon-192.png">
   </head>
 
