--- a/result.html
+++ b/result.html
@@ -1,20 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A hexadecimal color code game.">
 
-    <title>Hexadecimal Color Code Game</title>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A hexadecimal color code game.">
 
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-    <link rel="icon" type="image/png" href="images/icons/app-icon-192.png">
+  <title>Hexadecimal Color Code Game</title>
 
-  </head>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+  <link rel="icon" type="image/png" href="images/icons/app-icon-192.png">
 
-  <body>
+</head>
+
+<body>
+  <main>
     <h1 id="level">You are in level 1</h1>
     <h1>Your Score:</h1>
 
@@ -23,6 +25,7 @@
     <div class="answer" id="back">Next Level</div>
 
     <div class="answer" id="switchGameMode">Switch Game Mode</div>
+  </main>
+</body>
 
-  </body>
 </html>
